tests/baselines/reference/APISample_WatchWithDefaults.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,40): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_WatchWithDefaults.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. This uses default sys interface without having to pass anything
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import ts = require("typescript");
    
    function watchMain() {
        const configPath = ts.findConfigFile(/*searchPath*/ "./", ts.sys.fileExists, "tsconfig.json");
        if (!configPath) {
            throw new Error("Could not find a valid 'tsconfig.json'.");
        }
    
        // TypeScript can use several different program creation "strategies":
        //  * ts.createEmitAndSemanticDiagnosticsBuilderProgram,
        //  * ts.createSemanticDiagnosticsBuilderProgram
        //  * ts.createAbstractBuilder
        // The first two produce "builder programs". These use an incremental strategy to only re-check and emit files whose
        // contents may have changed, or whose dependencies may have changes which may impact change the result of prior type-check and emit.
        // The last uses an ordinary program which does a full type check after every change.
        // Between `createEmitAndSemanticDiagnosticsBuilderProgram` and `createSemanticDiagnosticsBuilderProgram`, the only difference is emit.
        // For pure type-checking scenarios, or when another tool/process handles emit, using `createSemanticDiagnosticsBuilderProgram` may be more desirable.
    
        // Note that there is another overload for `createWatchCompilerHost` that takes a set of root files.
        const host = ts.createWatchCompilerHost(configPath, {}, ts.sys);
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames, options, host, oldProgram) => {
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    watchMain();
    